--- a/index.html
+++ b/index.html
@@ -836,16 +836,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li><span class="left">Entrega:</span><span class="right">Setembro 2023</span></li>
         <li><span class="left">Tipo de Projeto:</span><span class="right">Residência Modular</span></li>
         <li><span class="left">Arquiteta:</span><span class="right">Alessandra Pretti</span></li>
-        <li><span class="left">Orçamento:</span><span class="right">R$ 2.600.000,00</span></li>
       </ul>
       <div class="project-detail-meta">
         <span class="left text-dark hidden-xs pull-sm-left">Compartilhar:</span>
         <div class="social-list pull-sm-right">
           <a href="#" class="icon ion-social-twitter"></a>
           <a href="#" class="icon ion-social-facebook"></a>
-          <a href="#" class="icon ion-social-googleplus"></a>
+
           <a href="#" class="icon ion-social-linkedin"></a>
-          <a href="#" class="icon ion-social-dribbble-outline"></a>
         </div>
       </div>
     </div>
@@ -986,6 +984,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   }
 </script>
 
+
         <!-- Project Modal Dialog 2 -->
         <div id="project2" class="container zoom-anim-dialog mfp-hide">
           <div class="row">
@@ -1029,48 +1028,187 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
 
-        <!-- Project Modal Dialog 3 -->
-        <div id="project3" class="container zoom-anim-dialog mfp-hide">
-          <div class="row">
-            <div class="col-lg-8"><img alt="" class="project-detail-img" src="images/projects/3-680x680.jpg"></div>
-            <div class="col-lg-4">
-              <h3 class="project-detail-title">Skan Hous 2.0 Alessandra Pretti</h3>
-              <p class="project-detail-text">Um novo projeto do escritório Elevare, a versão 2.0 representa um avanço em conforto, segurança e materiais utilizados. Praticidade e segurança aliada a acabamentos de qualidade.</p>
-              <ul class="project-detail-list text-dark">
-                <li>
-                  <span class="left">Cliente:</span>
-                  <span class="right">Skan Hous</span>
-                </li>
-                <li>
-                  <span class="left">Disponibilidade:</span>
-                  <span class="right">Novembro de 2025</span>
-                </li>
-                <li>
-                  <span class="left">Tipo de Projeto:</span>
-                  <span class="right">Residencial e Comercial</span>
-                </li>
-                <li>
-                  <span class="left">Arquitetura:</span>
-                  <span class="right">Estudio Elevare</span>
-                </li>
-                <li>
-                  <span class="left">Valores:</span>
-                  <span class="right">Sob consulta</span>
-                </li>
-              </ul>
-              <div class="project-detail-meta">
-                <span class="left text-dark hidden-xs pull-sm-left">Compartilhe:</span>
-                <div class="social-list pull-sm-right">
-                  <a href="" class="icon ion-social-twitter"></a>
-                  <a href="" class="icon ion-social-facebook"></a>
-                  <a href="" class="icon ion-social-googleplus"></a>
-                  <a href="" class="icon ion-social-linkedin"></a>
-                  <a href="" class="icon ion-social-dribbble-outline"></a>
-                </div>
-              </div>
-            </div>
-          </div>
+<!-- Project Modal Dialog 3 -->
+<div id="project3" class="container zoom-anim-dialog mfp-hide">
+  <div class="row">
+    <div class="col-lg-8">
+      <!-- Main Image Display with Navigation Arrows -->
+      <div class="main-image-container position-relative">
+        <button class="carousel-arrow main-carousel-arrow prev" onclick="prevMainImage()">❮</button>
+        <img id="mainImage" src="images/projects/3.1-960x540.jpg" alt="Project Image" class="img-fluid">
+        <button class="carousel-arrow main-carousel-arrow next" onclick="nextMainImage()">❯</button>
+      </div>
+      <!-- Thumbnails Carousel -->
+      <div class="thumbnail-carousel d-flex align-items-center justify-content-center mt-4">
+        <button class="carousel-arrow" onclick="slideThumbnails('left')">❮</button>
+        <div class="thumbnail-container d-flex overflow-hidden">
+          <img onclick="changeImage('images/projects/3.1-960x540.jpg')" src="images/projects/3.1-960x540.jpg" class="img-thumbnail" alt="Thumbnail 1">
+          <img onclick="changeImage('images/projects/3.2-960x540.jpg')" src="images/projects/3.2-960x540.jpg" class="img-thumbnail" alt="Thumbnail 2">
+          <img onclick="changeImage('images/projects/3.3-960x540.jpg')" src="images/projects/3.3-960x540.jpg" class="img-thumbnail" alt="Thumbnail 3">
+          <img onclick="changeImage('images/projects/3.4-960x540.jpg')" src="images/projects/3.4-960x540.jpg" class="img-thumbnail" alt="Thumbnail 4">
+          <img onclick="changeImage('images/projects/3.5-960x540.jpg')" src="images/projects/3.5-960x540.jpg" class="img-thumbnail" alt="Thumbnail 5">
+          <img onclick="changeImage('images/projects/3.6-960x540.jpg')" src="images/projects/3.6-960x540.jpg" class="img-thumbnail" alt="Thumbnail 6">
+          <img onclick="changeImage('images/projects/3.7-960x540.jpg')" src="images/projects/3.7-960x540.jpg" class="img-thumbnail" alt="Thumbnail 7">
+          <img onclick="changeImage('images/projects/3.8-960x540.jpg')" src="images/projects/3.8-960x540.jpg" class="img-thumbnail" alt="Thumbnail 8">
         </div>
+        <button class="carousel-arrow" onclick="slideThumbnails('right')">❯</button>
+      </div>
+    </div>
+    <div class="col-lg-4">
+      <h3 class="project-detail-title">Skan Hous 2.0 - Estudio Elevare</h3>
+      <p class="project-detail-text">Um novo projeto do escritório Elevare, a versão 2.0 representa um avanço em conforto, segurança e materiais utilizados. Praticidade e segurança aliada a acabamentos de qualidade.</p>
+      <ul class="project-detail-list text-dark">
+        <li><span class="left">Clientes:</span><span class="right">Skan Hous</span></li>
+        <li><span class="left">Entrega:</span><span class="right">Novembro 2024</span></li>
+        <li><span class="left">Tipo de Projeto:</span><span class="right">Residência Modular</span></li>
+        <li><span class="left">Arquiteta:</span><span class="right">Alessandra Pretti</span></li>
+      </ul>
+      <div class="project-detail-meta">
+        <span class="left text-dark hidden-xs pull-sm-left">Compartilhar:</span>
+        <div class="social-list pull-sm-right">
+          <a href="#" class="icon ion-social-twitter"></a>
+          <a href="#" class="icon ion-social-facebook"></a>
+          <a href="#" class="icon ion-social-linkedin"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Inline CSS for Responsiveness and Styling -->
+<style>
+  .main-image-container {
+    position: relative;
+    width: 100%;
+    max-width: 960px;
+    margin: auto;
+  }
+
+  .main-image-container img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+
+  .main-carousel-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    background: none;
+    border: none;
+    color: #333;
+    cursor: pointer;
+    padding: 0 10px;
+    z-index: 10;
+  }
+
+  .main-carousel-arrow.prev {
+    left: 10px;
+  }
+
+  .main-carousel-arrow.next {
+    right: 10px;
+  }
+
+  .main-carousel-arrow:hover {
+    color: #FFCE04;
+  }
+
+  .thumbnail-carousel {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-top: 24px;
+  }
+
+  .thumbnail-container {
+    display: flex;
+    gap: 8px;
+    overflow-x: hidden;
+    width: 80%;
+  }
+
+  .thumbnail-container .img-thumbnail {
+    width: 100px;
+    height: auto;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    transition: transform 0.3s, border-color 0.3s;
+  }
+
+  .thumbnail-container .img-thumbnail:hover {
+    transform: scale(1.1);
+  }
+
+  .thumbnail-container .img-thumbnail.selected {
+    border: 3px solid #FFCE04; /* Destaque do thumbnail selecionado */
+  }
+
+  .carousel-arrow {
+    font-size: 24px;
+    background: none;
+    border: none;
+    color: #333;
+    cursor: pointer;
+    padding: 0 10px;
+  }
+
+  .carousel-arrow:hover {
+    color: #FFCE04;
+  }
+</style>
+
+<!-- JavaScript for Image Switching and Carousel -->
+<script>
+  const thumbnails = document.querySelectorAll('.thumbnail-container .img-thumbnail');
+  const thumbnailContainer = document.querySelector('.thumbnail-container');
+  let mainImageIndex = 0;
+
+  const mainImages = [
+    'images/projects/1-960x540.jpg',
+    'images/projects/2-960x540.jpg',
+    'images/projects/3-960x540.jpg',
+    'images/projects/4-960x540.jpg',
+    'images/projects/5-960x540.jpg',
+    'images/projects/6-960x540.jpg'
+  ];
+
+  function changeMainImage(src, element) {
+    document.getElementById('mainImage').src = src;
+    thumbnails.forEach(thumb => thumb.classList.remove('selected'));
+    element.classList.add('selected');
+    mainImageIndex = mainImages.indexOf(src);
+  }
+
+  function prevMainImage() {
+    mainImageIndex = (mainImageIndex - 1 + mainImages.length) % mainImages.length;
+    document.getElementById('mainImage').src = mainImages[mainImageIndex];
+    highlightThumbnail(mainImages[mainImageIndex]);
+  }
+
+  function nextMainImage() {
+    mainImageIndex = (mainImageIndex + 1) % mainImages.length;
+    document.getElementById('mainImage').src = mainImages[mainImageIndex];
+    highlightThumbnail(mainImages[mainImageIndex]);
+  }
+
+  function highlightThumbnail(src) {
+    thumbnails.forEach(thumb => thumb.classList.remove('selected'));
+    const thumbnail = Array.from(thumbnails).find(thumb => thumb.src.includes(src));
+    if (thumbnail) thumbnail.classList.add('selected');
+  }
+
+  function slideThumbnails(direction) {
+    const scrollAmount = 120; // Control the scroll step
+    thumbnailContainer.scrollBy({
+      left: direction === 'left' ? -scrollAmount : scrollAmount,
+      behavior: 'smooth'
+    });
+  }
+</script>
+
 
         <!-- Project Modal Dialog 4 -->
         <div id="project4" class="container zoom-anim-dialog mfp-hide">
