--- a/index.html
+++ b/index.html
@@ -1167,12 +1167,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   let mainImageIndex = 0;
 
   const mainImages = [
-    'images/projects/1-960x540.jpg',
-    'images/projects/2-960x540.jpg',
-    'images/projects/3-960x540.jpg',
-    'images/projects/4-960x540.jpg',
-    'images/projects/5-960x540.jpg',
-    'images/projects/6-960x540.jpg'
+    'images/projects/3.1-960x540.jpg',
+    'images/projects/3.2-960x540.jpg',
+    'images/projects/3.3-960x540.jpg',
+    'images/projects/3.4-960x540.jpg',
+    'images/projects/3.5-960x540.jpg',
+    'images/projects/3.6-960x540.jpg',
+    'images/projects/3.7-960x540.jpg',
+    'images/projects/3.8-960x540.jpg'
   ];
 
   function changeMainImage(src, element) {
